--- a/crypto_sentiment.ipynb
+++ b/crypto_sentiment.ipynb
@@ -763,10 +763,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
-    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
-    "from string import punctuation\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\r\n",
+    "from nltk.corpus import stopwords\r\n",
+    "from nltk.stem import WordNetLemmatizer, PorterStemmer\r\n",
+    "from string import punctuation\r\n",
     "import re"
    ],
    "outputs": [],
@@ -776,19 +776,40 @@
    "cell_type": "code",
    "execution_count": 57,
    "source": [
-    "# Instantiate the lemmatizer\n",
-    "# YOUR CODE HERE!\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "\n",
-    "# Create a list of stopwords\n",
-    "# YOUR CODE HERE!\n",
-    "def process_text(article):\n",
-    "    sw = set(stopwords.words('english'))\n",
-    "    regex = re.compile(\"[^a-zA-Z ]\")\n",
-    "    re_clean = regex.sub('', article)\n",
-    "    words = word_tokenize(re_clean)\n",
-    "    lem = [lemmatizer.lemmatize(word) for word in words]\n",
-    "    output = [word.lower() for word in lem if word.lower() not in sw]\n",
+    "# Instantiate the lemmatizer\r\n",
+    "lemmatizer = WordNetLemmatizer()\r\n",
+    "\r\n",
+    "# Create a list of stopwords\r\n",
+    "stop = stopwords.words('english')\r\n",
+    "\r\n",
+    "# Expand the default stopwords list if necessary\r\n",
+    "stop.append(\"u\")\r\n",
+    "stop.append(\"it'\")\r\n",
+    "stop.append(\"'s\")\r\n",
+    "stop.append(\"n't\")\r\n",
+    "stop.append(\"_\")\r\n",
+    "stop.append(\"\\`\")\r\n",
+    "stop.append(\"``\")\r\n",
+    "stop.append(\"''''\")\r\n",
+    "stop = set(stop)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Complete the tokenizer function\r\n",
+    "def tokenizer(text):\r\n",
+    "    sw= set(stopwords.words('english'))\r\n",
+    "    regex= re.compile(\"[^a-zA-Z ]\")\r\n",
+    "    \r\n",
+    "    re_clean = regex.sub('', str(text))\r\n",
+    "    words= word_tokenize(re_clean)\r\n",
+    "    lem=[lemmatizer.lemmatize(word) for word in words]\r\n",
+    "    output = [word.lower() for word in lem if word.lower() not in sw ]\r\n",
+    "    \r\n",
     "    return output"
    ],
    "outputs": [],
@@ -796,40 +817,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "source": [
-    "print(set(process_text(article)))"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-59-c48e6684292d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprocess_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marticle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-57-05994c0deee7>\u001b[0m in \u001b[0;36mprocess_text\u001b[1;34m(article)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0msw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstopwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwords\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'english'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mregex\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mre\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"[^a-zA-Z ]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mre_clean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msub\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marticle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mwords\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mre_clean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mlem\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mlemmatizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlemmatize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mword\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mwords\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected string or bytes-like object"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 47,
    "source": [
-    "# Expand the default stopwords list if necessary\n",
-    "# YOUR CODE HERE!\n",
-    "def clean_text(article):\n",
-    "    sw = set(stopwords.words('english'))\n",
-    "    regex = re.compile(\"[^a-zA-Z ]\")\n",
-    "    sw_addons = {'said', 'sent', 'found', 'including', 'today', 'announced', 'week', 'basically', 'also'}\n",
-    "    \n",
-    "    re_clean = regex.sub('', article)\n",
-    "    words = word_tokenize(re_clean)\n",
-    "    output = [word.lower() for word in words if word.lower() not in sw.union(sw_addons)]\n",
+    "# Expand the default stopwords list if necessary\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "def clean_text(article):\r\n",
+    "    sw = set(stopwords.words('english'))\r\n",
+    "    regex = re.compile(\"[^a-zA-Z ]\")\r\n",
+    "    sw_addons = {'said', 'sent', 'found', 'including', 'today', 'announced', 'week', 'basically', 'also'}\r\n",
+    "    \r\n",
+    "    re_clean = regex.sub('', article)\r\n",
+    "    words = word_tokenize(re_clean)\r\n",
+    "    output = [word.lower() for word in words if word.lower() not in sw.union(sw_addons)]\r\n",
     "    return output"
    ],
    "outputs": [],
@@ -839,8 +845,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create a new tokens column for Bitcoin\n",
-    "# YOUR CODE HERE!\n"
+    "# Create a new tokens column for Bitcoin\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "btc_df[\"tokens\"] = btc_df.Text.apply(tokenizer)\r\n",
+    "btc_df.head()"
    ],
    "outputs": [],
    "metadata": {}
@@ -849,8 +857,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Create a new tokens column for Ethereum\n",
-    "# YOUR CODE HERE!"
+    "# Create a new tokens column for Ethereum\r\n",
+    "eth_df[\"tokens\"] = eth_df.Text.apply(tokenizer)\r\n",
+    "eth_df.head()# YOUR CODE HERE!"
    ],
    "outputs": [],
    "metadata": {}
@@ -878,7 +887,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from collections import Counter\n",
+    "from collections import Counter\r\n",
     "from nltk import ngrams"
    ],
    "outputs": [],
@@ -888,14 +897,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Generate the Bitcoin N-grams where N=2\n",
-    "# YOUR CODE HERE!\n",
-    "processed = process_text(text)\n",
-    "from collections import Counter\n",
-    "word_counts = Counter(processed)\n",
-    "print(dict(word_counts.most_common(20))) \n",
-    "bigram_counts = Counter(ngrams(processed, n=2)) \n",
-    "print(dict(bigram_counts.most_common(10))) "
+    "# Generate the Bitcoin N-grams where N=2\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "btc_ngram_counts = [Counter(ngrams(tokens, n=2)) for tokens in btc_df.tokens]\r\n",
+    "dict(btc_ngram_counts[0].most_common(10)"
    ],
    "outputs": [],
    "metadata": {}
@@ -904,8 +909,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Generate the Ethereum N-grams where N=2\n",
-    "# YOUR CODE HERE!"
+    "# Generate the Ethereum N-grams where N=2\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "eth_ngram_counts = [Counter(ngrams(tokens, n=2)) for tokens in eth_df.tokens]\r\n",
+    "dict(eth_ngram_counts[0].most_common(10))"
    ],
    "outputs": [],
    "metadata": {}
@@ -914,9 +921,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Function token_count generates the top 10 words for a given coin\n",
-    "def token_count(tokens, N=3):\n",
-    "    \"\"\"Returns the top N tokens from the frequency count\"\"\"\n",
+    "# Function token_count generates the top 10 words for a given coin\r\n",
+    "def token_count(tokens, N=3):\r\n",
+    "    \"\"\"Returns the top N tokens from the frequency count\"\"\"\r\n",
     "    return Counter(tokens).most_common(N)"
    ],
    "outputs": [],
@@ -926,9 +933,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Use token_count to get the top 10 words for Bitcoin\n",
-    "# YOUR CODE HERE!\n",
-    "print(dict(bigram_counts.most_common(10))) "
+    "# Use token_count to get the top 10 words for Bitcoin\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "btc_count = []\r\n",
+    "for tokens in btc_df.tokens:\r\n",
+    "    btcstr += tokens\r\n",
+    "btc_token_count = token_count(btc_count)\r\n",
+    "btc_token_count"
    ],
    "outputs": [],
    "metadata": {}
@@ -937,8 +948,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Use token_count to get the top 10 words for Ethereum\n",
-    "# YOUR CODE HERE!"
+    "# Use token_count to get the top 10 words for Ethereum\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "eth_count = []\r\n",
+    "for tokens in eth_df.tokens:\r\n",
+    "    ethstr += tokens\r\n",
+    "eth_token_count = token_count(eth_count)\r\n",
+    "eth_token_count"
    ],
    "outputs": [],
    "metadata": {}
@@ -963,10 +979,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.style.use('seaborn-whitegrid')\n",
-    "import matplotlib as mpl\n",
+    "from wordcloud import WordCloud\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "plt.style.use('seaborn-whitegrid')\r\n",
+    "import matplotlib as mpl\r\n",
     "mpl.rcParams['figure.figsize'] = [20.0, 10.0]"
    ],
    "outputs": [],
@@ -976,10 +992,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Generate the Bitcoin word cloud\n",
-    "# YOUR CODE HERE!\n",
-    "\n",
-    "btc_wc = WordCloud().generate(' '.join(entities))\n",
+    "# Generate the Bitcoin word cloud\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "btc_wordcloud = ' '.join(btc_df['Text'])\r\n",
+    "btc_wc = WordCloud().generate(btc_wordcloud)\r\n",
     "plt.imshow(btc_wc)"
    ],
    "outputs": [],
@@ -989,9 +1005,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Generate the Ethereum word cloud\n",
-    "# YOUR CODE HERE!\n",
-    "eth_wc = WordCloud().generate(' '.join(entities))\n",
+    "# Generate the Ethereum word cloud\r\n",
+    "# YOUR CODE HERE!\r\n",
+    "eth_wordcloud = ' '.join(eth_df['Text'])\r\n",
+    "\r\n",
+    "\r\n",
+    "eth_wc = WordCloud().generate(eth_wordcloud)\r\n",
     "plt.imshow(eth_wc)"
    ],
    "outputs": [],
@@ -1011,7 +1030,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import spacy\n",
+    "import spacy\r\n",
     "from spacy import displacy"
    ],
    "outputs": [],
@@ -1021,7 +1040,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Download the language model for SpaCy\n",
+    "# Download the language model for SpaCy\r\n",
     "# !python -m spacy download en_core_web_sm"
    ],
    "outputs": [],
@@ -1031,7 +1050,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Load the spaCy model\n",
+    "# Load the spaCy model\r\n",
     "nlp = spacy.load('en_core_web_sm')"
    ],
    "outputs": [],
@@ -1049,8 +1068,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Concatenate all of the Bitcoin text together\n",
-    "# YOUR CODE HERE!"
+    "# Concatenate all of the Bitcoin text together\r\n",
+    "\r\n",
+    "btc_wordcloud"
    ],
    "outputs": [],
    "metadata": {}
@@ -1059,11 +1079,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Run the NER processor on all of the text\n",
-    "# YOUR CODE HERE!\n",
-    "\n",
-    "# Add a title to the document\n",
-    "# YOUR CODE HERE!"
+    "# Run the NER processor on all of the text\r\n",
+    "bitcoin = nlp(btc_wordcloud)\r\n",
+    "\r\n",
+    "# Add a title to the document\r\n",
+    " bitcoin.user_data['title'] = 'Bitcoin NER'"
    ],
    "outputs": [],
    "metadata": {}
@@ -1072,8 +1092,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Render the visualization\n",
-    "# YOUR CODE HERE!"
+    "# Render the visualization\r\n",
+    "\r\n",
+    "displacy.render(bitcoin, style = 'ent')"
    ],
    "outputs": [],
    "metadata": {}
@@ -1082,8 +1103,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# List all Entities\n",
-    "# YOUR CODE HERE!"
+    "# List all Entities\r\n",
+    "print(bitcoin.ents)"
    ],
    "outputs": [],
    "metadata": {}
@@ -1106,8 +1127,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Concatenate all of the Ethereum text together\n",
-    "# YOUR CODE HERE!"
+    "# Concatenate all of the Ethereum text together\r\n",
+    "eth_wordcloud"
    ],
    "outputs": [],
    "metadata": {}
@@ -1116,11 +1137,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Run the NER processor on all of the text\n",
-    "# YOUR CODE HERE!\n",
-    "\n",
-    "# Add a title to the document\n",
-    "# YOUR CODE HERE!"
+    "# Run the NER processor on all of the text\r\n",
+    "ethereum = nlp(eth_wordcloud)\r\n",
+    "\r\n",
+    "# Add a title to the document\r\n",
+    "ethereum.user_data['title'] = 'Ethereum NER'"
    ],
    "outputs": [],
    "metadata": {}
@@ -1129,8 +1150,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Render the visualization\n",
-    "# YOUR CODE HERE!"
+    "# Render the visualization\r\n",
+    "displacy.render(ethereum, style = 'ent')"
    ],
    "outputs": [],
    "metadata": {}
@@ -1139,8 +1160,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# List all Entities\n",
-    "# YOUR CODE HERE!"
+    "# List all Entities\r\n",
+    "print(ethereum.ents)"
    ],
    "outputs": [],
    "metadata": {}
